Here's the commented version of the code snippet:

```python
# Copyright 2017 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Import required modules for testing gRPC services
import grpc_testing
from tests.testing.proto import requests_pb2
from tests.testing.proto import services_pb2

# Check if "FirstService" is defined in the protobuf services descriptor
if services_pb2.DESCRIPTOR.services_by_name.get("FirstService") is None:
    # If FirstService is not found (due to protobuf issue 3452), set all service references
    # to a placeholder string indicating the issue needs to be fixed
    FIRST_SERVICE = "Fix protobuf issue 3452!"
    FIRST_SERVICE_UNUN = "Fix protobuf issue 3452!"
    FIRST_SERVICE_UNSTRE = "Fix protobuf issue 3452!"
    FIRST_SERVICE_STREUN = "Fix protobuf issue 3452!"
    FIRST_SERVICE_STRESTRE = "Fix protobuf issue 3452!"
else:
    # If FirstService is available, set up references to the service and its methods
    # for easier access in tests
    FIRST_SERVICE = services_pb2.DESCRIPTOR.services_by_name["FirstService"]
    
    # Reference to the UnUn method of FirstService
    FIRST_SERVICE_UNUN = FIRST_SERVICE.methods_by_name["UnUn"]
    
    # Reference to the UnStre method of FirstService
    FIRST_SERVICE_UNSTRE = FIRST_SERVICE.methods_by_name["UnStre"]
    
    # Reference to the StreUn method of FirstService
    FIRST_SERVICE_STREUN = FIRST_SERVICE.methods_by_name["StreUn"]
    
    # Reference to the StreStre method of FirstService
    FIRST_SERVICE_STRESTRE = FIRST_SERVICE.methods_by_name["StreStre"]
```

The comments explain:
1. The license header and imports
2. The purpose of the conditional check for the FirstService
3. The fallback behavior when the service isn't found (due to a known protobuf issue)
4. The normal case where we set up references to the service and its methods
5. What each of the method references represents

The comments are clear and concise while providing enough context for future maintainers to understand both the normal operation and the workaround for the protobuf issue.